--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password=kk110301
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.main.allow-circular-references =  true
 spring.jpa.show-sql=false
+java.runtime.version=11
 
 
 #spring.jpa.hibernate.hbm2ddl.auto=update
